--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body{
+    background-color: #f5f5f5;
+}
 /* ############commons################### */
 
 *{
@@ -43,34 +46,36 @@
 .text-align{
     text-align: center;
 }
+
+.overlay{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    background-color: rgba(128, 128, 128, 0.363);
+    z-index: 2;
+}
 /* ##################end commons############### */
 
 /* ########### header section ############## */
-.header-top{
 
+
+.header-top{
 width: 100%;
 height: 100px;
 background-color:#f5f5f5;
+margin-bottom: 20px;
+
 }
-
-
-.header-top h1{
-    height: 100px;
-    display: inline;
-    vertical-align: middle;
-    padding-top: 10px;
-}
-
 .logo{
-    height: 100px;
-    width: 200px;
+    height: 70px;
+    width: 180px;
     vertical-align: middle;
+    border-right: 1px solid rgba(107, 99, 99, 0.452);
+    padding-right: 20px;
 }
 ul {
     margin-bottom: 40px;
-    
-
-}
+    }
 
 ul li{
     display: inline;
@@ -89,29 +94,21 @@ a:hover{
     color:rgb(107, 99, 99);
     
 }
-
-.overlay{
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    background-color: rgba(128, 128, 128, 0.877);
-    z-index: 2;
-}
 /* ########inizio header bottom ##############4 */
 
     .header-bottom{
-        height: 300px;
+        height: 600px;
         width: 100%;
         
     }
     .jambotron{
-    /* position: relative; */
+    position: relative;
     width: 100%;
-    height: 300px;
+    height: 100%;
     border-radius: 10px;
-    background-image: url(../images/samuel-austin-S_TIOyYuiJI-unsplash.jpg
-    );
+    background-image: url(../img/banner.jpg);
     background-size: cover;
+    background-position: 0% 40%;
     background-repeat: no-repeat;
     color: #f5f5f5;
     z-index: -1;
@@ -119,12 +116,12 @@ a:hover{
     
     
     .testo{
-        /* position: absolute; */
-        /* left: 20px;
-        bottom: 20px; */
+        position: absolute;
+        left: 50px;
+        bottom: 90px;
         width: 50%;
-        padding-top:  150px;
-        padding-left: 50px;
+        font-size:20px ;
+        
     }
 /* ~~~~~~~~~~~~end header section @~~~~~~~~~ */
 
@@ -145,7 +142,12 @@ a:hover{
 
 /* ~~~~~~~~~~~~end debug section ~~~~~~~~~~~~~~~ */
 
-/* ###############float section############ */
+/* ############### float section main ############ */
+
+main p{
+    color: rgba(107, 99, 99, 0.7);
+}
+
 .title{
     margin: 40px 0px;
 
@@ -163,37 +165,67 @@ a:hover{
     width:19%;
     margin-right:2%;
     padding-bottom: 30px;
-
+    
+    
 }
 
 .content3{
     width: 19%;
     margin-left: 2%;
     padding-bottom: 30px;
-    }
+}
 
 
 
 .content2{
     width: 58%;
     padding-bottom:30px ;
-
+    
 }
 
-.content1 img, 
-.content3 img{
+/* ####for the overlay class##### */
+
+.img-container-float{
     width: 100%;
-    border-radius: 10px;
-    z-index: -1;
+    height: 180px;
+}
+/* @@@@@@@/end .overlay@@@@@@@@ */
+
+.img-float1{
+    background-image: url(../img/img-1.jpg);
+    height: 180px;
+    background-size: cover;
+    z-index: 1;
 }
 
-.content2 img{
+.img-float2{
+    background-image: url(../img/banner-2.jpg);
+    height:180px;
+    background-size: 100% 140%;
+    background-repeat: no-repeat;
+    background-position-y: 60%;
+    
+}
+
+.img-float3{
+    background-image: url(../img/img-3.jpg);
+    height: 180px;
+    background-size: cover;
+}
+
+
+
+.content1 .img-float1, 
+.content3 .img-float3{
     width: 100%;
-    height: 171px;
+    height: 180px;
     border-radius: 10px;
-    object-fit: cover;
+  
+    
 
+    
 }
+
 
 .float-section h3{
     margin: 10px 0px;
