--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body{
     height: 100%;
     border-radius: 10px;
     background-color: rgba(128, 128, 128, 0.363);
-    z-index: 2;
+    
 }
 /* ##################end commons############### */
 
@@ -73,6 +73,8 @@ margin-bottom: 20px;
     border-right: 1px solid rgba(107, 99, 99, 0.452);
     padding-right: 20px;
 }
+
+/* #####inizio nav-bar###### */
 ul {
     margin-bottom: 40px;
     }
@@ -91,9 +93,11 @@ a{
     
 }
 a:hover{
-    color:rgb(107, 99, 99);
-    
+    color:rgb(107, 99, 99); 
 }
+
+/* ####fine nav-bar##### */
+
 /* ########inizio header bottom ##############4 */
 
     .header-bottom{
@@ -121,8 +125,7 @@ a:hover{
         bottom: 90px;
         width: 50%;
         font-size:20px ;
-        
-    }
+      }
 /* ~~~~~~~~~~~~end header section @~~~~~~~~~ */
 
 /* ~~~~~~debug section ~~~~~~~~~~ */
@@ -145,7 +148,7 @@ a:hover{
 /* ############### float section main ############ */
 
 main p{
-    color: rgba(107, 99, 99, 0.7);
+    color: rgba(107, 99, 99, 0.39);
 }
 
 .title{
@@ -193,14 +196,14 @@ main p{
 
 .img-float1{
     background-image: url(../img/img-1.jpg);
-    height: 180px;
     background-size: cover;
     z-index: 1;
 }
 
 .img-float2{
     background-image: url(../img/banner-2.jpg);
-    height:180px;
+    width: 100%;
+    height: 200px;
     background-size: 100% 140%;
     background-repeat: no-repeat;
     background-position-y: 60%;
@@ -209,7 +212,6 @@ main p{
 
 .img-float3{
     background-image: url(../img/img-3.jpg);
-    height: 180px;
     background-size: cover;
 }
 
@@ -218,8 +220,9 @@ main p{
 .content1 .img-float1, 
 .content3 .img-float3{
     width: 100%;
-    height: 180px;
+    height: 200px;
     border-radius: 10px;
+    background-size: cover;
   
     
 
